# tifx

./: .gitignore  CMakeLists.txt  LICENSE  README.rst  pyproject.toml  setup.py
.github/workflows/: build.yml  publish.yml
benchmarks/: bench_comprehensive.py  bench_formats.py  bench_gpu_io.py  bench_gpu_large.py  bench_gpu_write.py  bench_guitar.py  bench_read.py
docs/: camera.md  new_features.md
tests/: fetch_public_data.py  generate_tifffile_data.py  test_selection.py
tifffile/: __init__.py  camera.py  codecs.py  decoders.py  enums.py  fileio.py  gpu.py  metadata.py  page.py  sequences.py  series.py  tags.py  tifffile.py  utils.py
tifffile/series_parsers/: __init__.py  generic.py  imagej.py  lsm.py  microscopy.py  ome.py  other.py  pathology.py
tifffile/src/bindings/: bind_enums.cpp  bind_file_reader.cpp  bind_format.cpp  bind_ifd.cpp  bind_selection.cpp  module.cpp
tifffile/src/cpp/: common.cpp  file_reader.cpp  ifd_parser.cpp  selection.cpp
tifffile/src/include/tifffile/: common.hpp  enums.hpp  file_reader.hpp  ifd_entry.hpp  ifd_parser.hpp  selection.hpp  tiff_format.hpp
